added team and vision

--- a/about-team.html
+++ b/about-team.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158668425-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-158668425-1');
+</script>
+
         <title>Kurius</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -101,46 +111,245 @@
         <!-- END nav -->
 
     <section class="home-slider">
-      <div class="slider-item bread-wrap" style="height: 1000px; background-image: url('images/bg_1.jpg');" data-stellar-background-ratio="0.5">
+      <div class="slider-item bread-wrap" style="height: 3000px; background-image: url('images/bg_1.jpg');" data-stellar-background-ratio="0.5">
         <div class="overlay" style=" background: rgb(25,170,163);
         background: linear-gradient(45deg, rgba(25,170,163,1) 0%, rgba(203,89,184,1) 100%); ">
 
         </div>
         <div class="container">
           <div class="row slider-text justify-content-center align-items-center" style="padding-top: 200px;">
-            <div class="col-md-10 col-sm-12 ftco-animate mb-4 text-center"> 
-                <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span class="mr-2"><span>Our Vision</span></p>
+            <div class="col-md-10 col-sm-12 ftco-animate mb-4 text-center">
+                <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span class="mr-2"><span>Our Team</span></p>
                 <h1 class="mb-3">Our Team</h1>
                 <!-- Row for Team -->
-<!--               <div class="row" style="margin-top: 90px;">
+              <div class="row" style="margin-top: 90px;">
                 <div class="col-md-4 team-div">
-                    <a href="https://www.google.com" target="_blank">
-                      <img src="https://images.unsplash.com/photo-1503023345310-bd7c1de61c7d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=802&q=80">
+                    <a href="https://www.linkedin.com/in/gong-steven/" target="_blank">
+                      <img src="images/team/steven_real.png" style="object-fit: cover">
                     </a>
                     <div class="team-div-text">
-                    <a href="https://www.google.com" target="_blank">
-                      <p><span class="team-person-name">Batman</span>
-                      <br>Chief Energy Officer</p>
+                    <a href="https://www.linkedin.com/in/gong-steven/" target="_blank">
+                      <p><span class="team-person-name">Steven Gong</span>
+                      <br>Founder and President</p>
                     </a>
+                    <br>Hey Everyone! I am a first-year student at Marianopolis College stuying in Pure and Applied Sciences. In my spare time, I am either learning about artificial intelligence or playing badminton!</p>
+
                     </div>
                 </div>
+
+
+
                 <div class="col-md-4 team-div">
-                    <img src="https://images.unsplash.com/photo-1503023345310-bd7c1de61c7d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=802&q=80">
-                    <div class="team-div-text">
-                    <a href="https://www.google.com" target="_blank">
-                      <p><span class="team-person-name">Batman</span>
-                      <br>Chief Energy Officer</p>
+                    <a href="https://www.facebook.com/louis.fy.1" target="_blank">
+                      <img src="images/team/louis.jpg" style="object-fit: cover">
                     </a>
-                    </div>
-                </div>
-                <div class="col-md-4 team-div">
-                    <img src="https://images.unsplash.com/photo-1503023345310-bd7c1de61c7d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=802&q=80">
                     <div class="team-div-text">
-                      <p><span class="team-person-name">Batman</span>
-                      <br>Chief Energy Officer</p>
+                    <a href="https://www.facebook.com/louis.fy.1" target="_blank">
+                      <p><span class="team-person-name">Louis Friedland-Yust</span>
+                      <br>Public Relations Director</p>
+                    </a>
+                    <br>
+                    I am a student at Collège Jean-de-Brébeuf, currently studying in the International Baccalaureate Health Sciences program, while also a graduate of the secondary-level Latin Civilization profile. My various interests include canoeing, linguistics, history and theatre.
+                 </p>
+
                     </div>
                 </div>
-              </div> -->
+
+
+                <div class="col-md-4 team-div">
+                    <a href="https://www.linkedin.com/in/fr%C3%A9d%C3%A9ric-jarjour-301bb3197/?fbclid=IwAR0gP-vYHMo383S59FWdS2XigdvUut9IFCAqvhk0WEk388Mx-ahymBAeVt4" target="_blank">
+                      <img src="images/team/frederic.png" style="object-fit: cover">
+                    </a>
+                    <div class="team-div-text">
+                    <a href="https://www.linkedin.com/in/fr%C3%A9d%C3%A9ric-jarjour-301bb3197/?fbclid=IwAR0gP-vYHMo383S59FWdS2XigdvUut9IFCAqvhk0WEk388Mx-ahymBAeVt4" target="_blank">
+                      <p><span class="team-person-name">Frederic Jarjour</span>
+                      <br>Partnership Director</p>
+                    </a>
+                    <br>
+                    I'm a IB CEGEP student at Collège Jean-de-Brébeuf and I'm currently studying economics. I'm interested in technology and programming, as well as business and marketing.
+
+                 </p>
+
+                    </div>
+                </div>
+
+                <div class="col-md-4 team-div">
+                    <a href="https://www.linkedin.com/in/sunjinghan/" target="_blank">
+                      <img src="images/team/jinghan.jpg" style="object-fit: cover">
+                    </a>
+                    <div class="team-div-text">
+                    <a href="https://www.linkedin.com/in/sunjinghan/" target="_blank">
+                      <p><span class="team-person-name">Jing Han Sun</span>
+                      <br>Program Lead</p>
+                    </a>
+                    <br>
+                    I am a second-year student in pure and applied sciences at Marianopolis College and I plan to pursue my studies in mathematics and computer science. Other than Kurius, I tutor mathematics under my private company with a goal to inspire the younger generation and lead motivated kids to academic success.
+                 </p>
+
+                    </div>
+                </div>
+
+
+
+
+
+
+
+                <div class="col-md-4 team-div">
+                    <a href="https://www.linkedin.com/in/xuanning-y-21863818a/?fbclid=IwAR0eXzcp3J6iRkEfcyaHOt3yyEUv-DqKC8s5Pw5fb4nhZOeocRWCPNH1O4w" target="_blank">
+                      <img src="images/team/gary.jpg" style="object-fit: cover">
+                    </a>
+                    <div class="team-div-text">
+                    <a href="https://www.linkedin.com/in/xuanning-y-21863818a/?fbclid=IwAR0eXzcp3J6iRkEfcyaHOt3yyEUv-DqKC8s5Pw5fb4nhZOeocRWCPNH1O4w" target="_blank">
+                      <p><span class="team-person-name">Gary Yang</span>
+                      <br>Program Lead</p>
+                    </a>
+                    <br>
+                    I am a first year student at Marianopolis, in the Pure and Applied program. I love learning new things and solving problems, especially those related with computer softwares. During my free time, I enjoy reading fiction and novels.
+                 </p>
+
+                    </div>
+                </div>
+
+
+                <div class="col-md-4 team-div">
+                    <a href="https://www.linkedin.com/in/siger-ma-babbb3197/?fbclid=IwAR1UTO6rdlup0qXwBztQ3U06ERPIQM6j9H-6jUMcO-N0FC4FFNakI6j25m8" target="_blank">
+                      <img src="images/team/siger.jpg" style="object-fit: cover">
+                    </a>
+                    <div class="team-div-text">
+                    <a href="https://www.linkedin.com/in/siger-ma-babbb3197/?fbclid=IwAR1UTO6rdlup0qXwBztQ3U06ERPIQM6j9H-6jUMcO-N0FC4FFNakI6j25m8" target="_blank">
+                      <p><span class="team-person-name">Siger Ma</span>
+                      <br>Program Lead</p>
+                    </a>
+                    <br>
+                    I'm a student at Collège Jean-de-Brébeuf. Reading books and skiing are pastimes of mine, but nothing is better than a nice chat with some friends and family.
+                 </p>
+
+                    </div>
+                </div>
+
+
+
+
+
+
+
+
+                <div class="col-md-4 team-div">
+                    <a href="https://www.linkedin.com/in/laurence-liang-innovator/" target="_blank">
+                      <img src="images/team/laurence.png" style="object-fit: cover">
+                    </a>
+                    <div class="team-div-text">
+                    <a href="https://www.linkedin.com/in/laurence-liang-innovator/" target="_blank">
+                      <p><span class="team-person-name">Laurence Liang</span>
+                      <br>Program Lead/Web Developer</p>
+                    </a>
+                    <br>
+                    Currently studying at Marianopolis College, I am passionate about using machine learning to help vulnerable communities and to create tools to improve our lives.
+                 </p>
+
+                    </div>
+                </div>
+
+
+                <div class="col-md-4 team-div">
+                    <a href="https://www.linkedin.com/in/anthony-azrak/?fbclid=IwAR3bAt7sES0A1y1WinwVVr3c63y5nw0ipb9TS5EJcdv5rvr56x1IuJAuDAI" target="_blank">
+                      <img src="images/team/anthony.jpg" style="object-fit: cover">
+                    </a>
+                    <div class="team-div-text">
+                    <a href="https://www.linkedin.com/in/anthony-azrak/?fbclid=IwAR3bAt7sES0A1y1WinwVVr3c63y5nw0ipb9TS5EJcdv5rvr56x1IuJAuDAI" target="_blank">
+                      <p><span class="team-person-name">Anthony Azrak</span>
+                      <br>Secretary</p>
+                    </a>
+                    <br>Hey Everyone! I am a first-year student at Marianopolis College stuying in Pure and Applied Sciences. In my spare time, I am either learning about artificial intelligence or playing badminton!</p>
+
+                    </div>
+                </div>
+
+
+                <div class="col-md-4 team-div">
+                    <a href="" target="_blank">
+                      <img src="images/team/ezra.jpg" style="object-fit: cover">
+                    </a>
+                    <div class="team-div-text">
+                    <a href="" target="_blank">
+                      <p><span class="team-person-name">Ezra Asfaw</span>
+                      <br>Photographer/Editor</p>
+                    </a>
+                    <br>
+                    Hey! My name is Ezra Asfaw. I’m a Computer Engineering Technology student at Vanier College. Other then computer and technology, I have a passion for Digital creation, more precisely in photography and videography.
+                 </p>
+
+                    </div>
+                </div>
+
+
+
+
+<!--
+
+
+
+
+
+
+
+
+
+                <div class="col-md-4 team-div">
+                    <a href="https://www.linkedin.com/in/gong-steven/" target="_blank">
+                      <img src="images/team/steven_real.png" style="object-fit: cover">
+                    </a>
+                    <div class="team-div-text">
+                    <a href="https://www.linkedin.com/in/gong-steven/" target="_blank">
+                      <p><span class="team-person-name">Steven Gong</span>
+                      <br>Founder and President</p>
+                    </a>
+                    <br>Hey Everyone! I am a first-year student at Marianopolis College stuying in Pure and Applied Sciences. In my spare time, I am either learning about artificial intelligence or playing badminton!</p>
+
+                    </div>
+                </div>
+
+
+
+
+
+                <div class="col-md-4 team-div">
+                    <a href="https://www.linkedin.com/in/gong-steven/" target="_blank">
+                      <img src="images/team/steven_real.png" style="object-fit: cover">
+                    </a>
+                    <div class="team-div-text">
+                    <a href="https://www.linkedin.com/in/gong-steven/" target="_blank">
+                      <p><span class="team-person-name">Steven Gong</span>
+                      <br>Founder and President</p>
+                    </a>
+                    <br>Hey Everyone! I am a first-year student at Marianopolis College stuying in Pure and Applied Sciences. In my spare time, I am either learning about artificial intelligence or playing badminton!</p>
+
+                    </div>
+                </div>
+
+
+
+
+
+                <div class="col-md-4 team-div">
+                    <a href="https://www.linkedin.com/in/gong-steven/" target="_blank">
+                      <img src="images/team/steven_real.png" style="object-fit: cover">
+                    </a>
+                    <div class="team-div-text">
+                    <a href="https://www.linkedin.com/in/gong-steven/" target="_blank">
+                      <p><span class="team-person-name">Steven Gong</span>
+                      <br>Founder and President</p>
+                    </a>
+                    <br>Hey Everyone! I am a first-year student at Marianopolis College stuying in Pure and Applied Sciences. In my spare time, I am either learning about artificial intelligence or playing badminton!</p>
+
+                    </div>
+                </div>
+ -->
+
+
+
+              </div>
             </div>
           </div>
         </div>
