--- a/about-vision.html
+++ b/about-vision.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158668425-1"></script>
+<script>
+ window.dataLayer = window.dataLayer || [];
+ function gtag(){dataLayer.push(arguments);}
+ gtag('js', new Date());
+
+ gtag('config', 'UA-158668425-1');
+</script>
+
       <title>Kurius</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -75,18 +85,87 @@
       <!-- END nav -->
 
     <section class="home-slider">
-      <div class="slider-item bread-wrap">
-        <div class="overlay" style="background-image: url(images/img_9336093.jpg); background-attachment: fixed;
+      <div class="slider-item bread-wrap" style="height: 1200px">
+        <div class="overlay" style="
+
+        /* background: rgb(25,170,163);
+        background: linear-gradient(45deg, rgb(0,80,114) 0%, rgb(0,0,128) 100%); */
+
+        background-image: url(images/kuriusblackbg.png);
+         background-attachment: fixed;
      background-position: center;
      background-repeat: no-repeat;
-     background-size: cover;"</div>
+     background-size: cover;
+
+     "</div>
         <div class="container">
-          <div class="row slider-text justify-content-center align-items-center">
+          <div class="row slider-text justify-content-center align-items-center" style="padding-top: 200px;">
             <div class="col-md-10 col-sm-12 ftco-animate mb-4 text-center">
               <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span><span>Our Vision</span></p>
               <h1 class="mb-3">Our Vision</h1>
+
+             <!-- <div style="padding-bottom: 80px">
+                <h4 style="font-family: Lato; float:right; margin-right: 10px; color: white">Coming on February 11th 2020! Register <a href="https://kurius.ca">here</a></h4>
+
+             </div> -->
+             <p style="color: white; font-weight: 350; padding-top: 50px; font-family: Lato; text-align: justify">Technology is everywhere around us, from our computers to our refrigerators to our cars. Without its development, we would not be able to chat with our friends online, to have heat and light inside our house, or even to know what time it is. In that sense, technology is truly empowering and has resulted in remarkable progress to the human condition.
+</p>
+
+<p style="color: white; font-weight: 350; padding-top: 10px; font-family: Lato; text-align: justify">
+   However, for teenagers, we are made to believe, from a young age, that we have to wait until university in order to conduct research and to innovate in society. At this point in our lives, we should simply stick to keeping our grades up.
+
+</p>
+
+<p style="color: white; font-weight: 350; padding-top: 10px; font-family: Lato; text-align: justify">
+   At Kurius, we believe something different: that everyone can create technology that has the potential to change the world, no matter the age.
+
+</p>
+
+<p style="color: white; font-weight: 350; padding-top: 10px; font-family: Lato; text-align: justify">
+   The nonprofit organization was created in the summer of 2019 by a group of passionate young individuals with the goal to promote and make technological education accessible to all students in the province, after noticing the great lack of available resources for the aspiring youth to strive.
+
+</p>
+
+<p style="color: white; font-weight: 350; padding-top: 10px; font-family: Lato; text-align: justify">
+   Let us make clear that we are not here to replace the educational system. We are simply here to provide a place for students who want to go beyond their school’s curriculum by coding projects which can have a positive impact on society.
+
+</p>
+
+<p style="color: white; font-weight: 350; padding-top: 10px; font-family: Lato; text-align: justify">
+   Our vision is simply to empower students to pursue their projects and their passion for programming by providing a continuous supply of Kurius Hacks and workshops throughout the year to allow young innovators to constantly stimulate themselves intellectually.
+
+</p>
+
+
+<p style="color: white; font-weight: 350; padding-top: 10px; font-family: Lato; text-align: justify">
+
+</p>
+
+
+<p style="color: white; font-weight: 350; padding-top: 10px; font-family: Lato; text-align: justify">
+
+</p>
+
+
+<p style="color: white; font-weight: 350; padding-top: 10px; font-family: Lato; text-align: justify">
+
+</p>
+
+<p style="color: white; font-weight: 350; padding-top: 10px; font-family: Lato; text-align: justify">
+
+</p>
+
+
+<p style="color: white; font-weight: 350; padding-top: 10px; font-family: Lato; text-align: justify">
+
+</p>
+
+
+
+
             </div>
           </div>
+          <p></p>
         </div>
       </div>
     </section>
