--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158668425-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-158668425-1');
+</script>
+
   <title>Kurius</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -188,9 +198,16 @@ participants per Kurius Hack if our pilot project shows great success.</h3>
     background-size: cover;">
         <div class="col-md-7 text-center heading-section ftco-animate">
            <center><span style="font-size: 80px; color: white; font-weight: bold; font-family: Lato; align: center;">Kurius Web Hack</span></center>
-          <div style="padding-bottom: 80px"><h4 style="font-family: Lato; float:right; margin-right: 10px; color: white">Coming on February 11th 2020! Register <a href="https://kurius.ca">here</a></h4></div>
+          <!-- <div style="padding-bottom: 80px">
+             <h4 style="font-family: Lato; float:right; margin-right: 10px; color: white">Coming on February 11th 2020! Register <a href="https://kurius.ca">here</a></h4>
+
+          </div> -->
           <h3 style="color: white; font-weight: 350; padding-top: 10px;padding-bottom: 80px; font-family: Lato;">Our program is a 5-week long "hack" during which participants learn to code by
            tackling a specific problem in a guided workshop experience, divided into Kurius Capsules and Kurius Periods. Each Kurius Hack will revolve around a specific themesuch as website development and cryptocurrency. Our first Kurius Hack will be a Kurius Web Hack.</h3>
+           <div style="padding-bottom: 80px">
+             <h4 style="font-family: Lato; float:right; margin-right: 10px; color: white">Give us your input on the Kurius Hack through a short <a href="https://docs.google.com/forms/d/e/1FAIpQLScW10_x_7sPStXbDDZmsgjBOust8fH3AuHe_a-swho69sXPkQ/viewform" target="_blank">survey</a></h4>
+
+          </div>
         </div>
       </div>
     </div>
