--- a/about-team.html
+++ b/about-team.html
@@ -261,7 +261,9 @@
                       <p><span class="team-person-name">Anthony Azrak</span>
                       <br>Secretary</p>
                     </a>
-                    <br>Hey Everyone! I am a first-year student at Marianopolis College stuying in Pure and Applied Sciences. In my spare time, I am either learning about artificial intelligence or playing badminton!</p>
+                    <br>
+                    Hey there, I study at College Jean-de-Brebeuf. I like to work on robotics during my free time!
+                 </p>
 
                     </div>
                 </div>
