addupdated prospectus download

--- a/sponsor.html
+++ b/sponsor.html
@@ -83,8 +83,8 @@
             <div class="col-md-10 col-sm-12 ftco-animate mb-4 text-center">
               <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Partner</span></p>
               <h1 class="mb-3 bread">Want to support what we're doing?</h1>
-              <a href="https://drive.google.com/file/d/1fQzy9l5rQ6paHCPWBLX7pXgu5I_DICVg/view?usp=sharing" class="btn btn-primary btn-outline-white mt-3 py-3 px-4" target="_blank">For Companies</a>
-              <a href="https://drive.google.com/file/d/126eJo2n2mfu82MdeQNKNZ8kGQ_XfhnMS/view?usp=sharing" class="btn btn-primary btn-outline-white mt-3 py-3 px-4" target="_blank">For Mentors</a>
+              <a href="data/EN_companyprospectus.pdf" class="btn btn-primary btn-outline-white mt-3 py-3 px-4" target="_blank">For Companies</a>
+              <a href="data/EN_mentor_booklet .pdf" class="btn btn-primary btn-outline-white mt-3 py-3 px-4" target="_blank">For Mentors</a>
 
             </div>
 
