--- a/about-team.html
+++ b/about-team.html
@@ -262,7 +262,7 @@
                       <br>Secretary</p>
                     </a>
                     <br>
-                    Hey there, I study at College Jean-de-Brebeuf. I like to work on robotics during my free time!
+                    I'm currently attending Collège Jean-de-Brébeuf. On my free time, in between crafting artistic three dimensional scenes and reading dystopian novels, I enjoy taking up the role of a deceased leader and rewriting history à la Model UN.
                  </p>
 
                     </div>
