added ezra link

--- a/about-team.html
+++ b/about-team.html
@@ -270,11 +270,11 @@
 
 
                 <div class="col-md-4 team-div">
-                    <a href="" target="_blank">
+                    <a href="https://www.facebook.com/asfaw.ezra" target="_blank">
                       <img src="images/team/ezra.jpg" style="object-fit: cover">
                     </a>
                     <div class="team-div-text">
-                    <a href="" target="_blank">
+                    <a href="https://www.facebook.com/asfaw.ezra" target="_blank">
                       <p><span class="team-person-name">Ezra Asfaw</span>
                       <br>Photographer/Editor</p>
                     </a>
